--- a/index.html
+++ b/index.html
@@ -1,55 +1,168 @@
-<!DOKTYPE html>
-    <html lang="ru">
+<!DOCTYPE html>
+<html lang="ru">
 
-    <head>
-        <meta charcet="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <body class="body_content">
-        <div class="page">
-            <header class="header">
-                <div class="header_logo"> </div>
-                <span class="header_lang"> RU EN </span>
-            </header>
+    <link rel="stylesheet" href="./style.css">
+</head>
 
-            <main>
-                <section class="lead">
-                    <h1 class="lead-title"> Путешествия по России </h1>
-                    <p class="lead-subtinl"> Настоящая страна не в выпусках новостей, а здесь. </p>
-                    <img src="./img/__image.jpg" class="lead-image" alt="Дувушка в поезде">
-                    <p class="lead-caption"> Ваша полка сверху.</p>
-                </section>
-                <section class="intro">
-                    <h2 class="intro-title">Чего мы там не видели?</h2>
-                    <p class="intro-text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
-                        планируют провести
-                        отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-                        вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
-                        увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
-                        Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила
-                        их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
-                        интересные места, достойные вашего отпуска.</p>
-                    <ul class="intro-list">
-                        <li class="intro-list_it"> Часовых поясов 11</li>
-                        <li class="intro-list it"> Объектов природного наследия ЮНЕСКО 12</li>
-                        <li class="intro-list it"> Объектов культурного наследия ЮНЕСКО 16</li>
-                        <li class="intro-list it">Природных заповедников 105</li>
-                        <li class="intro-list it"> Аэропортов 241</li>
+
+<body class="body">
+    <div class="page">
 
 
 
-                    </ul>
-
-                </section>
+        <header class="header">
 
 
-            </main>
 
-            <footer>
-            </footer>
-        </div>
-    </body>
+            <img src="../сама_делаю/img/logo.png" style="max-width: 880px">
 
-    </html>
+
+        </header>
+
+
+
+        <main>
+
+            <section class="profile">
+                <img src="../сама_делаю/img/Avatar.png" style="max-width: 880px">
+
+                <ul class="profile__list">
+                    <li class="profile__list-name">Жак-Ив Кусто</li>
+
+                    <li class="profile__list-text">Исследователь океана</li>
+                </ul>
+                <button class="button__edit"><img src="./img/elements/Vector1.png" alt=""></button>
+
+                <button class="button__edd"><img src="./img/Vector.png" alt=""></button>
+            </section>
+
+
+            <section class="elements">
+
+                <div class="elements__color" style="border-radius: 10px">
+
+                    <!-- div { border-radius: 10px -->
+                    <img class="elements__" src="./img/elements/karachaevsk.png" alt="picture">
+                    <div class="elements__place">
+                        <!-- div { border-radius: 10px; }	 -->
+                        <p class="elements__text">Карачаевск</p>
+
+                        <img src="./img/elements/hart.png" class="elements__img">
+
+
+
+                        <!-- <img src="./img/elements/hart.png" style="background-color:white"> -->
+                    </div>
+
+                </div>
+                <div class="elements__color" style="border-radius: 10px">
+                    <img class="elements__" src="./img/elements/elbrus.png" alt="picture">
+                    <div class="elements__place">
+                        <p class="elements__text">Гора Эльбрус</p>
+
+                        <img src="./img/elements/hart.png" class="elements__img">
+
+
+
+                        <!-- <img src="./img/elements/hart.png" style="background-color:white"> -->
+                    </div>
+
+                </div>
+
+                <div class="elements__color" style="border-radius: 10px">
+                    <img class="elements__" src="./img/elements/dombay.png" alt="picture">
+                    <div class="elements__place">
+                        <p class="elements__text">Домбай</p>
+
+                        <img src="./img/elements/hart.png" class="elements__img">
+
+
+
+                        <!-- <img src="./img/elements/hart.png" style="background-color:white"> -->
+                    </div>
+
+                </div>
+
+                <div class="elements__color" style="border-radius: 10px">
+                    <img class="elements__" src="./img/elements/elbrus.png" alt="picture">
+                    <div class="elements__place">
+                        <p class="elements__text">Гора Эльбрус</p>
+
+                        <img src="./img/elements/hart.png" class="elements__img">
+
+
+
+                        <!-- <img src="./img/elements/hart.png" style="background-color:white"> -->
+                    </div>
+
+                </div>
+
+                <div class="elements__color" style="border-radius: 10px">
+                    <img class="elements__" src="./img/elements/dombay.png" alt="picture">
+                    <div class="elements__place">
+                        <p class="elements__text">Домбай</p>
+
+                        <img src="./img/elements/hart.png" class="elements__img">
+
+
+
+                        <!-- <img src="./img/elements/hart.png" style="background-color:white"> -->
+                    </div>
+
+                </div>
+                <div class="elements__color" style="border-radius: 10px">
+                    <img class="elements__" src="./img/elements/karachaevsk.png" alt="picture">
+                    <div class="elements__place">
+                        <p class="elements__text">Карачаевск</p>
+
+                        <img src="./img/elements/hart.png" class="elements__img">
+
+
+
+                        <!-- <img src="./img/elements/hart.png" style="background-color:white"> -->
+                    </div>
+
+                </div>
+
+
+
+                
+
+    </section>
+
+
+
+
+
+    </main>
+
+
+
+    <footer class="footer">
+
+        <p style="color:#545454">© 2020 Mesto Russia</p>
+
+        
+
+
+
+
+
+
+    </footer>
+
+
+    </div>
+
+
+
+
+
+
+</body>
+
+</html>
